menambahkan keranjang dan check out

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,22 +1,25 @@
-name: flutter_application_1
-description: "A new Flutter project."
+name: katalog_fashion_baru
+description: "A modern Flutter catalog app."
 publish_to: 'none'
-
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.9.2
+  sdk: '>=3.0.0 <4.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.8
   shared_preferences: ^2.2.2
+  loading_animation_widget: ^1.2.0
+  provider: ^6.1.2 # <-- BARIS INI DITAMBAHKAN untuk state management keranjang
+  url_launcher: ^6.3.2
+  webview_flutter: ^4.13.0
+  webview_flutter_android: ^4.10.5
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
+  flutter_lints: ^3.0.0
 
 flutter:
   uses-material-design: true
@@ -28,5 +31,5 @@ flutter:
     - assets/jeans.png
     - assets/jaket.png
     - assets/dress.png
-    
-
+    - assets/kaos1.png
+    - assets/promo.png
